<resources>
    <string name="url">http://mechatronic-001-site1.gtempurl.com/API.php</string>
    <string name="imgUrl">http://mechatronic-001-site1.gtempurl.com/admin/images/</string>
    <string name="app_name">tbs</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="try_later">Please Try later!</string>
    <string name="check_in">check in</string>
    <string name="check_out">check out</string>
    <string name="date_example">1/1/2018</string>
    <string name="finance">Finance</string>
    <string name="inventory">Inventory</string>
    <string name="check_internet">Please check your internet connection !</string>
    <string name="wrongusername">Wrong username or password !</string>
    <string name="all">All</string>
    <!--#####################################chart##################################-->
    <string name="animateX">Animate X</string>
    <string name="animateY">Animate Y</string>
    <string name="animateXY">Animate XY</string>
    <string name="actionToggleValues">Toggle Values</string>
    <string name="actionToggleYValues">Toggle Y-Values</string>
    <string name="actionToggleXValues">Toggle X-Values</string>

    <string name="actionToggleIcons">Toggle Icons</string>
    <string name="actionToggleHighlight">Toggle Highlight</string>
    <string name="actionTogglePinch">Toggle PinchZoom</string>
    <string name="actionToggleAutoScale">Toggle Auto Scale</string>

    <string name="actionToggleLineValues">Toggle Line Values</string>
    <string name="actionToggleBarValues">Toggle Bar Values</string>
    <string name="actionToggleBarBorders">Toggle Bar Borders</string>
    <string name="actionToggleFilled">Toggle Filled</string>
    <string name="actionToggleCircles">Toggle Circles</string>
    <string name="actionToggleCandleShadow">Toggle Shadow Color</string>

    <string name="actionToggleCubic">Toggle Cubic</string>
    <string name="actionToggleStepped">Toggle Stepped</string>
    <string name="actionToggleHorizontalCubic">Toggle Horizontal Cubic</string>

    <string name="actionAddEntry">Add Entry</string>
    <string name="actionFeedMultiple">Add Multiple</string>
    <string name="actionRemoveEntry">Remove Entry</string>
    <string name="actionAddDataSet">Add Data Set</string>
    <string name="actionRemoveDataSet">Remove Data Set</string>
    <string name="actionClearChart">Clear chart</string>

    <string name="actionTogglePercent">Toggle Percent</string>
    <string name="actionToggleMinAngles">Toggle Minimum Angles</string>
    <string name="actionToggleHole">Toggle Hole</string>
    <string name="actionToggleCurvedSlices">Toggle Curved Slices</string>
    <string name="actionDrawCenterText">Draw Center Text</string>
    <string name="actionToggleHighlightCircle">Toggle Highlight Circle</string>
    <string name="actionToggleRotation">Toggle Rotation</string>
    <string name="actionToggleSpin">Spin Animation</string>

    <string name="dash">-</string>
    <string name="scrollViewStart">START OF SCROLLVIEW</string>
    <string name="scrollViewEnd">END OF SCROLLVIEW</string>
    <string name="actionSave">Save to Gallery</string>

    <!--#####################################chart##################################-->


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
