<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".8"
            app:srcCompat="@drawable/logo1" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1.2"
            android:fontFamily="@font/handlee"
            android:hint="@string/username"
            android:inputType=""
            android:singleLine="true"
            android:textSize="14sp"
            app:met_baseColor="@color/primary_text"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimaryDark" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1.2"
            android:fontFamily="@font/handlee"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:password="true"
            android:singleLine="true"
            android:textSize="14sp"
            app:met_baseColor="@color/primary_text"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_weight="1.2"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="@font/handlee"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:visibility="visible" />
    </LinearLayout>
</RelativeLayout>