<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:layoutDirection="rtl"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="clip_vertical"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:weightSum="2">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/trans60"
            app:cardElevation="1dp">

            <LinearLayout
                android:id="@+id/check_inR"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/handlee"
                        android:gravity="center_horizontal"
                        android:text="@string/check_in"
                        android:textColor="@color/white" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:layout_centerInParent="true"
                        android:background="@android:color/transparent"
                        android:src="@drawable/fromdate" />
                </RelativeLayout>

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/check_inT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/handlee"
                        android:gravity="center_horizontal"
                        android:text="@string/date_example"
                        android:textColor="@color/primary_text"
                        android:textSize="14sp" />
                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/trans60"
            app:cardElevation="1dp">

            <LinearLayout
                android:id="@+id/check_outR"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/handlee"
                        android:gravity="center_horizontal"
                        android:text="@string/check_out"
                        android:textColor="@color/white" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/todate" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/check_outT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="false"
                        android:layout_alignParentTop="false"
                        android:fontFamily="@font/handlee"
                        android:gravity="top|center_horizontal"
                        android:text="1/1/2018"
                        android:textColor="@color/primary_text"
                        android:textSize="14sp" />
                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</RelativeLayout>